src/test/ui/borrowck/borrowck-init-in-fru.stderr
error[E0381]: binding `origin.y` isn't initialized
  --> $DIR/borrowck-init-in-fru.rs:9:14
   |
LL |     let mut origin: Point;
   |         ---------- variable declared here
LL |     origin = Point { x: 10, ..origin };
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^ `origin.y` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
